@@ -1,15 +1,21 @@
-#!/bin/sh
-mkdir -p /data/wecmdb/log
+#!/bin/bash
 
-JAVA_OPT="-verbose:gc -Xloggc:/data/wecmdb/log/wecmdb_gc_%p.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -XX:+PrintAdaptiveSizePolicy"
-JAVA_OPT="${JAVA_OPT} -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=30m"
+sed -i "s~{{CMDB_MYSQL_HOST}}~$CMDB_MYSQL_HOST~g" /app/cmdb/conf/default.json
+sed -i "s~{{CMDB_MYSQL_PORT}}~$CMDB_MYSQL_PORT~g" /app/cmdb/conf/default.json
+sed -i "s~{{CMDB_MYSQL_SCHEMA}}~$CMDB_MYSQL_SCHEMA~g" /app/cmdb/conf/default.json
+sed -i "s~{{CMDB_MYSQL_USER}}~$CMDB_MYSQL_USER~g" /app/cmdb/conf/default.json
+sed -i "s~{{CMDB_MYSQL_PWD}}~$CMDB_MYSQL_PWD~g" /app/cmdb/conf/default.json
+sed -i "s~{{CMDB_LOG_LEVEL}}~$CMDB_LOG_LEVEL~g" /app/cmdb/conf/default.json
+sed -i "s~{{GATEWAY_URL}}~$GATEWAY_URL~g" /app/cmdb/conf/default.json
+sed -i "s~{{JWT_SIGNING_KEY}}~$JWT_SIGNING_KEY~g" /app/cmdb/conf/default.json
+sed -i "s~{{SUB_SYSTEM_CODE}}~$SUB_SYSTEM_CODE~g" /app/cmdb/conf/default.json
+sed -i "s~{{SUB_SYSTEM_KEY}}~$SUB_SYSTEM_KEY~g" /app/cmdb/conf/default.json
+sed -i "s~{{HTTP_SERVER_PORT}}~$HTTP_SERVER_PORT~g" /app/cmdb/conf/default.json
+if [ $PLUGIN_MODE ]
+then
+sed -i "s~{{PLUGIN_MODE}}~yes~g" /app/cmdb/conf/default.json
+else
+sed -i "s~{{PLUGIN_MODE}}~no~g" /app/cmdb/conf/default.json
+fi
 
-java -jar /application/cmdb-core.jar ${JAVA_OPT} --server.address=0.0.0.0 --server.port=${CMDB_SERVER_PORT} --server.servlet.context-path=/wecmdb  \
---spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver \
---spring.datasource.url=jdbc:mysql://${MYSQL_SERVER_ADDR}:${MYSQL_SERVER_PORT}/${MYSQL_SERVER_DATABASE_NAME}?serverTimezone=Asia\/Shanghai\&characterEncoding=utf8  \
---spring.datasource.username=${MYSQL_USER_NAME} \
---spring.datasource.password=${MYSQL_USER_PASSWORD}  \
---cmdb.datasource.schema=${MYSQL_SERVER_DATABASE_NAME} \
---cmdb.security.enabled=false \
---cmdb.security.whitelist-ip-address=${CMDB_IP_WHITELISTS} \
-${CUSTOM_PARAM} >>/data/wecmdb/log/wecmdb-core.log
+./cmdb-server
